--- a/ui5.yaml
+++ b/ui5.yaml
@@ -1,6 +1,6 @@
 specVersion: '1.0'
 metadata:
-  name: exersice_2
+  name: Exercise4BookStore
 type: application
 resources:
   configuration:
@@ -17,14 +17,14 @@ builder:
       configuration:
         destDir: dist
         appFolder: webapp
-        nameSpace: com/kpmg
+        nameSpace: kpmg/com
     - name: webide-extension-task-lint
       afterTask: webide-extension-task-updateNeoApp
       configuration:
         destDir: dist
         appFolder: webapp
-        nameSpace: com/kpmg 
+        nameSpace: kpmg/com 
     - name: webide-extension-task-resources
       afterTask: webide-extension-task-lint
       configuration:
-        nameSpace: com/kpmg
+        nameSpace: kpmg/com
