--- a/neo-app.json
+++ b/neo-app.json
@@ -36,6 +36,15 @@
         "entryPath": "/test-resources"
       },
       "description": "SAPUI5 Test Resources"
+    },
+    {
+      "path": "/sap/opu/odata",
+      "target": {
+        "type": "destination",
+        "name": "D78_700",
+        "entryPath": "/sap/opu/odata"
+      },
+      "description": "D78_700"
     }
   ],
   "sendWelcomeFileRedirect": true
